Fixed css for point labels so they won't fall behind series.  Note, this may interfere with cursor and zoom as they will lie on top of plot. Added format string capability to point labels. Added another stacked bar example.

--- a/src/jquery.jqplot.css
+++ b/src/jquery.jqplot.css
@@ -154,6 +154,7 @@ table.jqplot-cursor-tooltip {
 
 .jqplot-point-label {
     font-size: 0.75em;
+    z-index: 2;
 }
       
 td.jqplot-cursor-legend-swatch {
